--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,6 @@
 @layer theme, base, mui, components, utilities;
+/* @import "tailwindcss/preflight"; */
+/* @tailwind utilities; */
 @import "tailwindcss";
 
 :root {
